FIX: Tagging plugin was blocking composer status on smaller screens.

--- a/app/assets/stylesheets/desktop/compose.scss
+++ b/app/assets/stylesheets/desktop/compose.scss
@@ -288,6 +288,7 @@
     }
 
     .submit-panel {
+      width: 28%;
       position: absolute;
       display: block;
       bottom: 8px;
